using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class GlobalButtons : MonoBehaviour
{
    public const string HORIZONTAL_AXIS = "Horizontal";
    public const string JUMP = "Jump";
    public const string FIRE1 = "Fire1";
    public const string FIRE2 = "Fire2";
    public const string FIRE3 = "Fire3";
    public const string IS_RUNNING = "isRunning";
    public const string IS_JUMPING = "isJumping";
    public const string IS_SHOOTING = "isShooting";
    public const string IS_DEAD = "isDead";
    public const string IS_ATTACK1 = "isOrdinaryAttack";
    public const string IS_ATTACK2 = "isPowerAttack";

}
